--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,6 @@
+/*=====================================================================================================================
+                                                 COMMON
+=====================================================================================================================*/
 body {
     background-size: auto;
     background-repeat: no-repeat;
@@ -12,7 +15,6 @@ body {
   top: 40px;
   margin: 0 auto;
   text-align: center;
-  align-items: center;
 }
 
 .leftpane {
@@ -36,35 +38,10 @@ h1 {
   line-height: 26.4px;
 }
 
-input[type="text"] {
-  display: block;
-  margin: 0;
-  width: 100%;
-  font-size: 18px;
-  appearance: none;
-  box-shadow: none;
-  border-radius: none;
+.middlecontent {
+  padding-left: 200px
 }
-input[type="text"]:focus {
-  outline: none;
-}
-textarea {
-  display: block;
-  margin: 0;
-  width: 100%;
-  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
-  font-size: 18px;
-  appearance: none;
-  box-shadow: none;
-  border-radius: none;
-  resize: none;
-}
-textarea:focus {
-  outline: none;
-}
-/* ============================================================
-  COMMON
-============================================================ */
+
 /* sections */
 section {
   margin-bottom: 60px;
@@ -128,8 +105,11 @@ textarea {
 textarea:focus {
   outline: none;
 }
-/* lists */
-ul.input-list {
+
+/*=====================================================================================================================
+                                                  LISTS
+=====================================================================================================================*/
+.ul.input-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -151,18 +131,56 @@ ul.input-list li {
     margin-bottom: 10px;
   }
 }
-/* ============================================================
-  STYLE 1
-============================================================ */
-.style-1 input[type="text"] {
+
+/*=====================================================================================================================
+                                                  INPUT & TEXTAREA
+=====================================================================================================================*/
+input[type="text"] {
+  display: block;
+  margin: 0;
+  width: 100%;
+  font-size: 18px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+}
+
+input[type="text"]:focus {
+  outline: none;
+}
+
+textarea {
+  padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 4px;
+  padding-left: 4px;
+  display: block;
+  margin: 0;
+  width: 100%;
+  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+  font-size: 18px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  resize: none;
+}
+
+textarea:focus {
+  outline: none;
+}
+
+.style-1 input[type="text"] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 4px;
+  padding-left: 4px;
   border: solid 1px gainsboro;
   -webkit-transition: box-shadow 0.3s, border 0.3s;
   -moz-transition: box-shadow 0.3s, border 0.3s;
   -o-transition: box-shadow 0.3s, border 0.3s;
   transition: box-shadow 0.3s, border 0.3s;
 }
+
 .style-1 input[type="text"]:focus, .style-1 input[type="text"].focus {
   border: solid 1px #707070;
   -webkit-box-shadow: 0 0 5px 1px #969696;
@@ -177,77 +195,56 @@ ul.input-list li {
   -o-transition: box-shadow 0.3s, border 0.3s;
   transition: box-shadow 0.3s, border 0.3s;
 }
+
 .style-1 textarea:focus, .style-1 textarea.focus {
   border: solid 1px #707070;
   -webkit-box-shadow: 0 0 5px 1px #969696;
   -moz-box-shadow: 0 0 5px 1px #969696;
   box-shadow: 0 0 5px 1px #969696;
 }
-/* ============================================================
-  STYLE 2
-============================================================ */
-.style-2 input[type="text"] {
-  padding: 10px;
-  border: solid 5px #c9c9c9;
-  -webkit-transition: border 0.3s;
-  -moz-transition: border 0.3s;
-  -o-transition: border 0.3s;
-  transition: border 0.3s;
-}
-.style-2 input[type="text"]:focus, .style-2 input[type="text"].focus {
-  border: solid 5px #969696;
-}
 
-/* ============================================================
-  STYLE 3
-============================================================ */
-.style-3 input[type="text"] {
-  padding: 10px;
-  border: solid 5px #c9c9c9;
-  -webkit-box-shadow: inset 0 0 0 1px #707070;
-  -moz-box-shadow: inset 0 0 0 1px #707070;
-  box-shadow: inset 0 0 0 1px #707070;
-  -webkit-transition: box-shadow 0.3s, border 0.3s;
-  -moz-transition: box-shadow 0.3s, border 0.3s;
-  -o-transition: box-shadow 0.3s, border 0.3s;
-  transition: box-shadow 0.3s, border 0.3s;
+/*=====================================================================================================================
+                                                  BUTTONS
+=====================================================================================================================*/
+.myButton {
+	-moz-box-shadow:inset 0px 0px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 0px 0px 0px #ffffff;
+	box-shadow:inset 0px 0px 0px 0px #ffffff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
+	background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+	background:-webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+	background:-o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+	background:-ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+	background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9',GradientType=0);
+	background-color:#f9f9f9;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+	font-size:15px;
+	font-weight:bold;
+	padding:10px 18px;
+	text-decoration:none;
+	text-shadow:0px 0px 0px #ffffff;
+  width: 100px;
+  margin-left: 20px;
 }
-.style-3 input[type="text"]:focus, .style-3 input[type="text"].focus {
-  border: solid 5px #969696;
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9));
+	background:-moz-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+	background:-webkit-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+	background:-o-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+	background:-ms-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9',GradientType=0);
+	background-color:#e9e9e9;
 }
-
-/* ============================================================
-  STYLE 4
-============================================================ */
-.style-4 input[type="text"] {
-  padding: 10px;
-  border: none;
-  border-bottom: solid 2px #c9c9c9;
-  -webkit-transition: border 0.3s;
-  -moz-transition: border 0.3s;
-  -o-transition: border 0.3s;
-  transition: border 0.3s;
-}
-.style-4 input[type="text"]:focus, .style-4 input[type="text"].focus {
-  border-bottom: solid 2px #969696;
-}
-
-/* ============================================================
-  STYLE 5
-============================================================ */
-.style-5 input[type="text"] {
-  padding: 10px;
-  border: solid 1px #fff;
-  -webkit-box-shadow: inset 1px 1px 2px 0 #707070;
-  -moz-box-shadow: inset 1px 1px 2px 0 #707070;
-  box-shadow: inset 1px 1px 2px 0 #707070;
-  -webkit-transition: box-shadow 0.3s;
-  -moz-transition: box-shadow 0.3s;
-  -o-transition: box-shadow 0.3s;
-  transition: box-shadow 0.3s;
-}
-.style-5 input[type="text"]:focus, .style-5 input[type="text"].focus {
-  -webkit-box-shadow: inset 1px 1px 2px 0 #c9c9c9;
-  -moz-box-shadow: inset 1px 1px 2px 0 #c9c9c9;
-  box-shadow: inset 1px 1px 2px 0 #c9c9c9;
+.myButton:active {
+	position:relative;
+	top:1px;
 }
