--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,6 +52,12 @@ h2 {
 /*=====================================================================================================================
                                                   LISTS
 =====================================================================================================================*/
+ul.input-list li {
+  display: inline-flex;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
 .input-list {
  padding-left: 0px;
 }
@@ -60,11 +66,6 @@ h2 {
   list-style: none;
   margin: 0px;
   padding: 0px;
-}
-ul.input-list li {
-  display: inline-flex;
-  width: 100%;
-  margin-bottom: 10px;
 }
 
 @media all and (max-width: 800px) {
@@ -139,7 +140,6 @@ textarea:focus {
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 1px;
-  border: solid 1px gainsboro;
   -webkit-transition: box-shadow 0.3s, border 0.3s;
   -moz-transition: box-shadow 0.3s, border 0.3s;
   -o-transition: box-shadow 0.3s, border 0.3s;
@@ -147,7 +147,6 @@ textarea:focus {
 }
 
 .style-1 input[type="text"]:focus, .style-1 input[type="text"].focus {
-  border: solid 1px #707070;
   -webkit-box-shadow: 0 0 5px 1px #969696;
   -moz-box-shadow: 0 0 5px 1px #969696;
   box-shadow: 0 0 5px 1px #969696;
@@ -168,6 +167,9 @@ textarea:focus {
   box-shadow: 0 0 5px 1px #969696;
 }
 
+.red-border {
+  border: solid 3px red;
+}
 /*=====================================================================================================================
                                                   BUTTONS
 =====================================================================================================================*/
@@ -218,7 +220,11 @@ textarea:focus {
   position:relative;
   top:1px;
 }
-
+/*
+.red-border.style-1 {
+  border: solid 2px red;
+};
+*/
 /*=====================================================================================================================
                                                   NAVIGATION LINKS
 =====================================================================================================================*/
