--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,7 +37,7 @@ body {
                                                 HEADINGS
 =====================================================================================================================*/
 h1 {
-  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+  font-family: copperplate;
   font-size: 34px;
   font-style: normal;
   font-variant: normal;
@@ -86,7 +86,7 @@ input[type="text"] {
   display: block;
   margin: 0;
   width: 100%;
-  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+  font-family: copperplate;
   font-size: 18px;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -115,7 +115,7 @@ textarea {
   display: block;
   margin: 0;
   width: 100%;
-  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+  font-family: copperplate;
   font-size: 18px;
   appearance: none;
   box-shadow: none;
@@ -192,7 +192,7 @@ textarea:focus {
 	display:inline-block;
 	cursor:pointer;
 	color:#666666;
-  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+  font-family: copperplate;
 	font-size:15px;
 	font-weight:bold;
 	padding:10px 18px;
@@ -237,7 +237,7 @@ nav a {
   display: inline-block;
   background-color: #eee;
   border-radius: 4px;
-  font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+  font-family: copperplate;
 }
 nav a:visited, a:link {
   color: #000000;
@@ -248,4 +248,9 @@ nav a:hover {
 }
 nav a.active {
   color: #000000;
+}
+
+@font-face {
+   font-family: copperplate;
+   src: url("../fonts/copperplate_gothic_light_regular.ttf");
 }
